--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Android CI
 
 on:
   push:
@@ -24,8 +24,10 @@ jobs:
       run: chmod +x gradlew && mv dummy-gs.json app/google-services.json
     - name: Build with Gradle
       run: ./gradlew build assembleDebug --stacktrace
+    - name: Move apk
+      run: mkdir -p uploads && mv app/build/outputs/apk/debug/app-debug.apk uploads/
     - name: Upload APK
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v2-preview
       with:
         name: app.apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+        path: uploads/app-debug.apk
