Edit CI for production values

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,13 +21,21 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew && mv dummy-gs.json app/google-services.json
+      run: chmod +x gradlew && chmod +x catbox
+    - name: Download production GS
+      env: # Or as an environment variable
+        gs_url: ${{ secrets.GS_URL }}
+      run: wget -q -O app/google-services.json $gs_url
     - name: Build with Gradle
-      run: ./gradlew build assembleDebug --stacktrace
+      run: ./gradlew build assembleRelease --stacktrace
     - name: Move apk
-      run: mkdir -p uploads && mv app/build/outputs/apk/debug/app-debug.apk uploads/
+      run: mkdir -p uploads && mv app/build/outputs/apk/release/app-release-unsigned.apk uploads/app-release.apk
+    - name: Send telegram Message
+      env:
+        bot_token: ${{ secrets.BOT_TOKEN }}
+      run: curl -v --silent -F caption="$(git log --decorate=no --oneline -1)  $(./catbox file uploads/app-release.apk)" -F chat_id="459034222" -F document=@"$PWD/uploads/app-release.apk" https://api.telegram.org/bot$bot_token/sendDocument
     - name: Upload APK
       uses: actions/upload-artifact@v2-preview
       with:
         name: app.apk
-        path: uploads/app-debug.apk
+        path: uploads/app-release.apk
