--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
     <application
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher_web"
@@ -16,7 +15,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".views.news_activity"></activity>
+        <activity android:name=".views.NoticeActivity"></activity>
         <activity android:name=".views.ResourceActivity" />
         <activity android:name=".views.CMSWV" />
         <activity android:name=".views.CMSActivity" />
